[package]
name = "pfui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive", "color"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
mpd = { version = "0.0.12", optional = true }
time = { version = "0.1.44", optional = true }
pulse = { version = "2.0", package = "libpulse-binding", optional = true }

[features]
default = ["mpd", "pulseaudio"]
mpd = ["dep:mpd", "dep:time"]
pulseaudio = ["dep:pulse"]

